force-app/main/default/objects/Auditoria__c/Auditoria__c.object-meta.xml
<CustomObject>
    <label>Auditoria Qualidade</label>
    <nameField>
        <displayFormat>AUD-{0000}</displayFormat>
        <label>Auditoria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auditoria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>