force-app/main/default/objects/Auditoria__c/fields/Data_da_aprova_o__c.field-meta.xml
<CustomField>
    <fullName>Data_da_aprova_o__c</fullName>
    <label>Data da aprovação</label>
    <type>Date</type>
</CustomField>