force-app/main/default/objects/Auditoria__c/fields/Data_da_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Auditoria__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Data da Auditoria</label>
    <required>true</required>
    <type>Date</type>
</CustomField>