force-app/main/default/objects/Auditoria__c/fields/Data_de_cria_o_do_documento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_cria_o_do_documento__c</fullName>
    <description>Data de criação do documento padrão dos documentos da qualidade</description>
    <label>Data de criação do documento</label>
    <type>Date</type>
</CustomField>