force-app/main/default/objects/Auditoria__c/fields/Data_de_emiss_o_do_documento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_emiss_o_do_documento__c</fullName>
    <label>Data de emissão do documento</label>
    <type>Date</type>
</CustomField>