force-app/main/default/objects/Auditoria__c/fields/Disponivel_para_Auditar__c.field-meta.xml
<CustomField>
    <fullName>Disponivel_para_Auditar__c</fullName>
    <formula>AND(
    NOT(ISBLANK(Empresa_Auditada__c)),
    NOT(ISBLANK(Responsavel__c)),
    NOT(ISBLANK(Data_da_Auditoria__c)),
    NOT(ISBLANK(Auditado__c)),
    ISPICKVAL(Status__c, &apos;EM ANDAMENTO&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponivel_para_Auditar</label>
    <type>Checkbox</type>
</CustomField>