force-app/main/default/objects/Auditoria__c/fields/Empresa_Auditada__c.field-meta.xml
<CustomField>
    <fullName>Empresa_Auditada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa Auditada</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Grupo_Hospcom__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Auditoria</relationshipLabel>
    <relationshipName>Auditoria</relationshipName>
    <type>Lookup</type>
</CustomField>