force-app/main/default/objects/Auditoria__c/fields/Nome_do_planejamento__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_planejamento__c</fullName>
    <formula>Planejamento_de_Auditoria__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do planejamento</label>
    <type>Text</type>
</CustomField>