force-app/main/default/objects/Auditoria__c/fields/Percentual_de_conformidade__c.field-meta.xml
<CustomField>
    <fullName>Percentual_de_conformidade__c</fullName>
    <formula>(Total_de_C__c / (Total_de_NC__c + Total_de_C__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentual de conformidade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>