force-app/main/default/objects/Auditoria__c/fields/Percentual_Total__c.field-meta.xml
<CustomField>
    <fullName>Percentual_Total__c</fullName>
    <formula>((Total_Parcial_1__c + Total_Parcial_2__c + Total_Parcial_3__c + Total_Parcial_4__c) / 216) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentual Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>