force-app/main/default/objects/Auditoria__c/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável pela Auditoria</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>001i00000085QYbAAM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Auditoria1</relationshipName>
    <type>Lookup</type>
</CustomField>