force-app/main/default/objects/Auditoria__c/fields/Tipo_da_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Tipo_da_Auditoria__c</fullName>
    <label>Tipo da Auditoria</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auditorias</valueSetName>
    </valueSet>
</CustomField>