force-app/main/default/objects/Auditoria__c/fields/Total_de_C__c.field-meta.xml
<CustomField>
    <fullName>Total_de_C__c</fullName>
    <label>Total de Conformidades</label>
    <summaryFilterItems>
        <field>Resposta__c.Resposta__c</field>
        <operation>equals</operation>
        <value>C</value>
    </summaryFilterItems>
    <summaryForeignKey>Resposta__c.Auditoria__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>