force-app/main/default/objects/Auditoria__c/fields/Total_de_conformidade_estruturais__c.field-meta.xml
<CustomField>
    <fullName>Total_de_conformidade_estruturais__c</fullName>
    <label>Total de conformidade estruturais</label>
    <summaryFilterItems>
        <field>Resposta__c.Tipo_da_Pergunta__c</field>
        <operation>equals</operation>
        <value>ESTRUTURAL</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Resposta__c.Resposta__c</field>
        <operation>equals</operation>
        <value>C</value>
    </summaryFilterItems>
    <summaryForeignKey>Resposta__c.Auditoria__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>