force-app/main/default/objects/Auditoria__c/fields/Total_de_NC_documentais__c.field-meta.xml
<CustomField>
    <fullName>Total_de_NC_documentais__c</fullName>
    <label>Total de não conformidades documentais</label>
    <summaryFilterItems>
        <field>Resposta__c.Tipo_da_Pergunta__c</field>
        <operation>equals</operation>
        <value>DOCUMENTAL</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Resposta__c.Resposta__c</field>
        <operation>equals</operation>
        <value>NC</value>
    </summaryFilterItems>
    <summaryForeignKey>Resposta__c.Auditoria__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>