force-app/main/default/objects/Auditoria__c/fields/Total_Parcial_3__c.field-meta.xml
<CustomField>
    <fullName>Total_Parcial_3__c</fullName>
    <formula>IF(X109__c, 1, 0) + IF(X110__c, 1, 0) + IF(X111__c, 1, 0) + IF(X112__c, 1, 0) + IF(X113__c, 1, 0) +
IF(X114__c, 1, 0) + IF(X115__c, 1, 0) + IF(X116__c, 1, 0) + IF(X117__c, 1, 0) + IF(X118__c, 1, 0) +
IF(X119__c, 1, 0) + IF(X120__c, 1, 0) + IF(X121__c, 1, 0) + IF(X122__c, 1, 0) + IF(X123__c, 1, 0) +
IF(X124__c, 1, 0) + IF(X125__c, 1, 0) + IF(X126__c, 1, 0) + IF(X127__c, 1, 0) + IF(X128__c, 1, 0) +
IF(X129__c, 1, 0) + IF(X130__c, 1, 0) + IF(X131__c, 1, 0) + IF(X132__c, 1, 0) + IF(X133__c, 1, 0) +
IF(X134__c, 1, 0) + IF(X135__c, 1, 0) + IF(X136__c, 1, 0) + IF(X137__c, 1, 0) + IF(X138__c, 1, 0) +
IF(X139__c, 1, 0) + IF(X140__c, 1, 0) + IF(X141__c, 1, 0) + IF(X142__c, 1, 0) + IF(X143__c, 1, 0) +
IF(X144__c, 1, 0) + IF(X145__c, 1, 0) + IF(X146__c, 1, 0) + IF(X147__c, 1, 0) + IF(X148__c, 1, 0) +
IF(X149__c, 1, 0) + IF(X150__c, 1, 0) + IF(X151__c, 1, 0) + IF(X152__c, 1, 0) + IF(X153__c, 1, 0) +
IF(X154__c, 1, 0) + IF(X155__c, 1, 0) + IF(X156__c, 1, 0) + IF(X157__c, 1, 0) + IF(X158__c, 1, 0) +
IF(X159__c, 1, 0) + IF(X160__c, 1, 0) + IF(X161__c, 1, 0) + IF(X162__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Parcial 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>