force-app/main/default/objects/Auditoria__c/fields/Total_Parcial_4__c.field-meta.xml
<CustomField>
    <fullName>Total_Parcial_4__c</fullName>
    <formula>IF(X163__c, 1, 0) + IF(X164__c, 1, 0) + IF(X165__c, 1, 0) + IF(X166__c, 1, 0) + IF(X167__c, 1, 0) +
IF(X168__c, 1, 0) + IF(X169__c, 1, 0) + IF(X170__c, 1, 0) + IF(X171__c, 1, 0) + IF(X172__c, 1, 0) +
IF(X173__c, 1, 0) + IF(X174__c, 1, 0) + IF(X175__c, 1, 0) + IF(X176__c, 1, 0) + IF(X177__c, 1, 0) +
IF(X178__c, 1, 0) + IF(X179__c, 1, 0) + IF(X180__c, 1, 0) + IF(X181__c, 1, 0) + IF(X182__c, 1, 0) +
IF(X183__c, 1, 0) + IF(X184__c, 1, 0) + IF(X185__c, 1, 0) + IF(X186__c, 1, 0) + IF(X187__c, 1, 0) +
IF(X188__c, 1, 0) + IF(X189__c, 1, 0) + IF(X190__c, 1, 0) + IF(X191__c, 1, 0) + IF(X192__c, 1, 0) +
IF(X193__c, 1, 0) + IF(X194__c, 1, 0) + IF(X195__c, 1, 0) + IF(X196__c, 1, 0) + IF(X197__c, 1, 0) +
IF(X198__c, 1, 0) + IF(X199__c, 1, 0) + IF(X200__c, 1, 0) + IF(X201__c, 1, 0) + IF(X202__c, 1, 0) +
IF(X203__c, 1, 0) + IF(X204__c, 1, 0) + IF(X205__c, 1, 0) + IF(X206__c, 1, 0) + IF(X207__c, 1, 0) +
IF(X208__c, 1, 0) + IF(X209__c, 1, 0) + IF(X210__c, 1, 0) + IF(X211__c, 1, 0) + IF(X212__c, 1, 0) +
IF(X213__c, 1, 0) + IF(X214__c, 1, 0) + IF(X215__c, 1, 0) + IF(X216__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Parcial 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>