force-app/main/default/objects/Auditoria__c/fields/X100__c.field-meta.xml
<CustomField>
    <fullName>X100__c</fullName>
    <defaultValue>false</defaultValue>
    <description>100 - Se sim para a questão anterior, quais os cuidados são tomados?</description>
    <inlineHelpText>100 - Se sim para a questão anterior, quais os cuidados são tomados?</inlineHelpText>
    <label>100 - Se sim para a questão anterior,...</label>
    <type>Checkbox</type>
</CustomField>