force-app/main/default/objects/Auditoria__c/fields/X101__c.field-meta.xml
<CustomField>
    <fullName>X101__c</fullName>
    <defaultValue>false</defaultValue>
    <description>101 -  Se sim para a questão anterior, existe Programa de Gerenciamento de Resíduos em Serviço de Saúde
(PGRSS)?</description>
    <inlineHelpText>101 -  Se sim para a questão anterior, existe Programa de Gerenciamento de Resíduos em Serviço de Saúde
(PGRSS)?</inlineHelpText>
    <label>101 -  Se sim para a questão anterior, e</label>
    <type>Checkbox</type>
</CustomField>