force-app/main/default/objects/Auditoria__c/fields/X102__c.field-meta.xml
<CustomField>
    <fullName>X102__c</fullName>
    <defaultValue>false</defaultValue>
    <description>102 - A empresa gera algum resíduo biológico ou seu processo apresenta algum risco biológico?</description>
    <inlineHelpText>102 - A empresa gera algum resíduo biológico ou seu processo apresenta algum risco biológico?</inlineHelpText>
    <label>102 - A empresa gera algum resíduo bioló</label>
    <type>Checkbox</type>
</CustomField>