force-app/main/default/objects/Auditoria__c/validationRules/status.validationRule-meta.xml
<ValidationRule>
    <fullName>status</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Status__c ) == &quot;EM ANDAMENTO&quot; &amp;&amp; ISCHANGED(Status__c )</errorConditionFormula>
    <errorMessage>DEPOIS DE CONCLUIDO, VOCÊ NÃO PODE ALTERAR A RNC</errorMessage>
</ValidationRule>