force-app/main/default/objects/Auditoria__c/validationRules/teste.validationRule-meta.xml
<ValidationRule>
    <fullName>teste</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Status__c) == &quot;CONCLUIDO&quot; &amp;&amp;  
OR(
ISCHANGED(x1__c),
ISCHANGED(X2__c),
ISCHANGED(X3__c),
ISCHANGED(X4__c),
ISCHANGED(X5__c),
ISCHANGED(X6__c),
ISCHANGED(X7__c),
ISCHANGED(X8__c),
ISCHANGED(X9__c),
ISCHANGED(X10__c),
ISCHANGED(X11__c),
ISCHANGED(X12__c),
ISCHANGED(X13__c),
ISCHANGED(X14__c),
ISCHANGED(X15__c),
ISCHANGED(X16__c),
ISCHANGED(X17__c),
ISCHANGED(X18__c),
ISCHANGED(X19__c),
ISCHANGED(X20__c),
ISCHANGED(X21__c),
ISCHANGED(X22__c),
ISCHANGED(X23__c),
ISCHANGED(X24__c),
ISCHANGED(X25__c),
ISCHANGED(X26__c),
ISCHANGED(X27__c),
ISCHANGED(X28__c),
ISCHANGED(X29__c),
ISCHANGED(X30__c),
ISCHANGED(X31__c),
ISCHANGED(X32__c),
ISCHANGED(X33__c),
ISCHANGED(X34__c),
ISCHANGED(X35__c),
ISCHANGED(X36__c),
ISCHANGED(X37__c),
ISCHANGED(X38__c),
ISCHANGED(X39__c),
ISCHANGED(X40__c),
ISCHANGED(X41__c),
ISCHANGED(X42__c),
ISCHANGED(X43__c),
ISCHANGED(X44__c),
ISCHANGED(X45__c),
ISCHANGED(X46__c),
ISCHANGED(X47__c),
ISCHANGED(X48__c),
ISCHANGED(X49__c),
ISCHANGED(X50__c),
ISCHANGED(X51__c),
ISCHANGED(X52__c),
ISCHANGED(X53__c),
ISCHANGED(X54__c),
ISCHANGED(X55__c),
ISCHANGED(X56__c),
ISCHANGED(X57__c),
ISCHANGED(X58__c),
ISCHANGED(X59__c),
ISCHANGED(X60__c),
ISCHANGED(X61__c),
ISCHANGED(X62__c),
ISCHANGED(X63__c),
ISCHANGED(X64__c),
ISCHANGED(X65__c),
ISCHANGED(X66__c),
ISCHANGED(X67__c),
ISCHANGED(X68__c),
ISCHANGED(X69__c),
ISCHANGED(X70__c),
ISCHANGED(X71__c),
ISCHANGED(X72__c),
ISCHANGED(X73__c),
ISCHANGED(X74__c),
ISCHANGED(X75__c),
ISCHANGED(X76__c),
ISCHANGED(X77__c),
ISCHANGED(X78__c),
ISCHANGED(X79__c),
ISCHANGED(X80__c),
ISCHANGED(X81__c),
ISCHANGED(X82__c),
ISCHANGED(X83__c),
ISCHANGED(X84__c),
ISCHANGED(X85__c),
ISCHANGED(X86__c),
ISCHANGED(X87__c),
ISCHANGED(X88__c),
ISCHANGED(X89__c),
ISCHANGED(X90__c)
)</errorConditionFormula>
    <errorMessage>&quot;Você não pode fazer alterações, pois a auditoria foi finalizada&quot;</errorMessage>
</ValidationRule>