force-app/main/default/objects/Auditoria__c/validationRules/verifica_status_2.validationRule-meta.xml
<ValidationRule>
    <fullName>verifica_status_2</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Status__c) = &quot;CONCLUIDO&quot; &amp;&amp; OR(
ISCHANGED(X91__c),
ISCHANGED(X92__c),
ISCHANGED(X93__c),
ISCHANGED(X94__c),
ISCHANGED(X95__c),
ISCHANGED(X96__c),
ISCHANGED(X97__c),
ISCHANGED(X98__c),
ISCHANGED(X99__c),
ISCHANGED(X100__c),
ISCHANGED(X101__c),
ISCHANGED(X102__c),
ISCHANGED(X103__c),
ISCHANGED(X104__c),
ISCHANGED(X105__c),
ISCHANGED(X106__c),
ISCHANGED(X107__c),
ISCHANGED(X108__c),
ISCHANGED(X109__c),
ISCHANGED(X110__c),
ISCHANGED(X111__c),
ISCHANGED(X112__c),
ISCHANGED(X113__c),
ISCHANGED(X114__c),
ISCHANGED(X115__c),
ISCHANGED(X116__c),
ISCHANGED(X117__c),
ISCHANGED(X118__c),
ISCHANGED(X119__c),
ISCHANGED(X120__c),
ISCHANGED(X121__c),
ISCHANGED(X122__c),
ISCHANGED(X123__c),
ISCHANGED(X124__c),
ISCHANGED(X125__c),
ISCHANGED(X126__c),
ISCHANGED(X127__c),
ISCHANGED(X128__c),
ISCHANGED(X129__c),
ISCHANGED(X130__c),
ISCHANGED(X131__c),
ISCHANGED(X132__c),
ISCHANGED(X133__c),
ISCHANGED(X134__c),
ISCHANGED(X135__c),
ISCHANGED(X136__c),
ISCHANGED(X137__c),
ISCHANGED(X138__c),
ISCHANGED(X139__c),
ISCHANGED(X140__c),
ISCHANGED(X141__c),
ISCHANGED(X142__c),
ISCHANGED(X143__c),
ISCHANGED(X144__c),
ISCHANGED(X145__c),
ISCHANGED(X146__c),
ISCHANGED(X147__c),
ISCHANGED(X148__c),
ISCHANGED(X149__c),
ISCHANGED(X150__c),
ISCHANGED(X151__c),
ISCHANGED(X152__c),
ISCHANGED(X153__c),
ISCHANGED(X154__c),
ISCHANGED(X155__c),
ISCHANGED(X156__c),
ISCHANGED(X157__c),
ISCHANGED(X158__c),
ISCHANGED(X159__c),
ISCHANGED(X160__c),
ISCHANGED(X161__c),
ISCHANGED(X162__c),
ISCHANGED(X163__c),
ISCHANGED(X164__c),
ISCHANGED(X165__c),
ISCHANGED(X166__c),
ISCHANGED(X167__c),
ISCHANGED(X168__c),
ISCHANGED(X169__c),
ISCHANGED(X170__c),
ISCHANGED(X171__c),
ISCHANGED(X172__c),
ISCHANGED(X173__c),
ISCHANGED(X174__c),
ISCHANGED(X175__c),
ISCHANGED(X176__c),
ISCHANGED(X177__c),
ISCHANGED(X178__c),
ISCHANGED(X179__c),
ISCHANGED(X180__c),
ISCHANGED(X181__c),
ISCHANGED(X182__c),
ISCHANGED(X183__c),
ISCHANGED(X184__c),
ISCHANGED(X185__c),
ISCHANGED(X186__c),
ISCHANGED(X187__c),
ISCHANGED(X188__c))</errorConditionFormula>
    <errorMessage>Não pode haver alterações, pois a AUDITORIA já foi concluída</errorMessage>
</ValidationRule>