force-app/main/default/objects/Auditoria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Empresa_Auditada__c</columns>
    <columns>Auditado__c</columns>
    <columns>Status__c</columns>
    <columns>Responsavel__c</columns>
    <columns>Percentual_Total__c</columns>
    <columns>Data_de_cria_o_do_documento__c</columns>
    <columns>Percentual_de_conformidade__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>