force-app/main/default/objects/Auditoria__c/listViews/Geral.listView-meta.xml
<ListView>
    <fullName>Geral</fullName>
    <columns>NAME</columns>
    <columns>Empresa_Auditada__c</columns>
    <columns>Status__c</columns>
    <columns>Responsavel__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Geral</label>
</ListView>